fix doubled work and useless events